[package]
name = "roon-rd"
version = "1.4.1"
edition = "2021"
authors = ["Momentlabs <david@momentlabs.io>"]
repository = "https://github.com/jdrivas/roon-rd"

[dependencies]
# Roon API from GitHub
roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", rev = "33516cc", features = ["transport", "image", "browse"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.29", features = ["full"] }
futures-util = "0.3"

# Web server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
simplelog = "0.12"

# Time formatting
chrono = "0.4"

# Interactive readline with history
rustyline = "14"

# User directories
dirs = "5.0"

# Terminal colors
colored = "2.1"

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# UPnP/SSDP discovery and control
ssdp-client = "1.0"
rupnp = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
quick-xml = { version = "0.36", features = ["serialize"] }
regex = "1.10"
url = "2.5"
urlencoding = "2.1"
